# bayesian_design

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: Untitled.ipynb
src/bed/: __init__.py  base.py  ekf.py  experiments.py  models.py  utils.py
src/bed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/bed/cli/: main.py
tests/: ekf_test.py  experiment_test.py  gp_test.py  linear_test.py  model_test.py  utils.py
